unpackaged/main/default/objects/Account/fields/Academic_Status__c.field-meta.xml
<CustomField>
    <fullName>Academic_Status__c</fullName>
    <label>Academic Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic Warning</fullName>
                <color>#FFFF66</color>
                <label>Academic Warning</label>
            </value>
            <value>
                <fullName>Met SAP</fullName>
                <color>#33FF33</color>
                <label>Met SAP</label>
            </value>
            <value>
                <fullName>Academic Probation</fullName>
                <color>#FF6600</color>
                <label>Academic Probation</label>
            </value>
            <value>
                <fullName>Academic Termination</fullName>
                <color>#FF0000</color>
                <label>Academic Termination</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>