unpackaged/main/default/objects/Account/fields/FERPA_Relationship_to_Student__c.field-meta.xml
<CustomField>
    <fullName>FERPA_Relationship_to_Student__c</fullName>
    <label>FERPA (Relationship to Student)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>