unpackaged/main/default/objects/Account/fields/FIN_Tuition_Amount__c.field-meta.xml
<CustomField>
    <fullName>FIN_Tuition_Amount__c</fullName>
    <inlineHelpText>The value in this field represents the total Program #1 tuition and fees charged to the student.</inlineHelpText>
    <label>FIN Tuition Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>