unpackaged/main/default/objects/Account/fields/Funding_Status__c.field-meta.xml
<CustomField>
    <fullName>Funding_Status__c</fullName>
    <label>Funding Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Doc Review Scheduled</fullName>
            </value>
            <value>
                <fullName>Doc Review Complete</fullName>
            </value>
            <value>
                <fullName>Doc Review Incomplete</fullName>
            </value>
            <value>
                <fullName>Doc Review Failed</fullName>
            </value>
            <value>
                <fullName>Enrolled / Submitted for Conversion</fullName>
            </value>
            <value>
                <fullName>Doc Problem / Unable to Convert</fullName>
            </value>
            <value>
                <fullName>Enrolled/Submitted to Lender</fullName>
            </value>
            <value>
                <fullName>No Longer Interested</fullName>
            </value>
            <value>
                <fullName>Funded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>