unpackaged/main/default/objects/Account/fields/Military_Branch__c.field-meta.xml
<CustomField>
    <fullName>Military_Branch__c</fullName>
    <description>Branch of Service in the US Military</description>
    <label>Military Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Force</fullName>
                <color>#0B6FCE</color>
                <label>Air Force</label>
            </value>
            <value>
                <fullName>Army</fullName>
                <color>#78C953</color>
                <label>Army</label>
            </value>
            <value>
                <fullName>Coast Guard</fullName>
                <color>#E27001</color>
                <label>Coast Guard</label>
            </value>
            <value>
                <fullName>Marines</fullName>
                <color>#A845DC</color>
                <label>Marines</label>
            </value>
            <value>
                <fullName>National Guard</fullName>
                <color>#F3D904</color>
                <label>National Guard</label>
            </value>
            <value>
                <fullName>Navy</fullName>
                <color>#993300</color>
                <label>Navy</label>
            </value>
            <value>
                <fullName>Space Force</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>