unpackaged/main/default/objects/Account/fields/Military_Status__c.field-meta.xml
<CustomField>
    <fullName>Military_Status__c</fullName>
    <description>Relabel from Military Experience 03.13.2024</description>
    <inlineHelpText>Data is mapped at Lead Conversion, supports reference fields on Oppty and Student Program</inlineHelpText>
    <label>Military Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Military Experience</fullName>
            </value>
            <value>
                <fullName>Active Military</fullName>
            </value>
            <value>
                <fullName>Veteran</fullName>
            </value>
            <value>
                <fullName>Military Spouse</fullName>
            </value>
            <value>
                <fullName>Military Dependent</fullName>
            </value>
            <value>
                <fullName>Reservist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>