unpackaged/main/default/objects/Account/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IT ProCareer</fullName>
            </value>
            <value>
                <fullName>IT ProCareer (Govt)</fullName>
            </value>
            <value>
                <fullName>IT ProBasic</fullName>
            </value>
            <value>
                <fullName>IT ProBasic (Govt)</fullName>
            </value>
            <value>
                <fullName>IT ProCareer Upgrade</fullName>
            </value>
            <value>
                <fullName>IT ProOnline</fullName>
            </value>
            <value>
                <fullName>IT ProAdvanced</fullName>
            </value>
            <value>
                <fullName>CiscoPro</fullName>
            </value>
            <value>
                <fullName>ITSA</fullName>
            </value>
            <value>
                <fullName>ITSE</fullName>
            </value>
            <value>
                <fullName>MCBA</fullName>
            </value>
            <value>
                <fullName>HSIS</fullName>
            </value>
            <value>
                <fullName>PHARM</fullName>
            </value>
            <value>
                <fullName>CONT. ED</fullName>
            </value>
            <value>
                <fullName>ADMIN SPEC</fullName>
            </value>
            <value>
                <fullName>PC Tech</fullName>
            </value>
            <value>
                <fullName>Voc Rehab</fullName>
            </value>
            <value>
                <fullName>eCom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>