unpackaged/main/default/objects/Account/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <label>Campus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arlington</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>Columbus</fullName>
                <color>#009900</color>
                <label>Columbus</label>
            </value>
            <value>
                <fullName>Dallas</fullName>
                <color>#33FF33</color>
                <label>Dallas</label>
            </value>
            <value>
                <fullName>Houston</fullName>
                <color>#3333FF</color>
                <label>Houston</label>
            </value>
            <value>
                <fullName>IDL Campus</fullName>
                <color>#FFFF66</color>
                <label>IDL Campus</label>
            </value>
            <value>
                <fullName>Indianapolis</fullName>
                <color>#33CCFF</color>
                <label>Indianapolis</label>
            </value>
            <value>
                <fullName>Nellis AFB</fullName>
            </value>
            <value>
                <fullName>Raleigh</fullName>
                <color>#6600CC</color>
                <label>Raleigh</label>
            </value>
            <value>
                <fullName>Sugar Land</fullName>
            </value>
            <value>
                <fullName>Test campus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>