unpackaged/main/default/objects/Account/fields/Student_SSN_encrypted__c.field-meta.xml
<CustomField>
    <fullName>Student_SSN_encrypted__c</fullName>
    <label>Student SSN (encrypted)</label>
    <length>25</length>
    <maskChar>X</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>