unpackaged/main/default/objects/Account/recordTypes/Academic_Department.recordType-meta.xml
<RecordType>
    <fullName>Academic_Department</fullName>
    <active>true</active>
    <label>Academic Department</label>
</RecordType>